Update Calculator without GUI - added SNAKECASE and CLASS.ipynb

--- a/Calculator without GUI - added SNAKECASE and CLASS.ipynb
+++ b/Calculator without GUI - added SNAKECASE and CLASS.ipynb
@@ -32,7 +32,7 @@
     "!pip install snakecase\n",
     "\n",
     "for filename in os.listdir():\n",
-    "    os.rename(filename, snakecase(filename))\n",
+    "    os.rename(filename, snakecase(Calculator))\n",
     "\n",
     "class Calculator:\n",
     "    \n",
